[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ydse"
version = "0.1.0"
description = "Young's Double Slit Experiment notebook project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "matplotlib",
  "colour-science",
]
